[package]
name = "autopilot"
version = "0.1.0"
authors = ["vincent <vincent.leporcher@telecom-paris.fr>"]
edition = "2018"

[dependencies]

anyhow = "1.0.32"
chrono = "0.4.15"
crossbeam-channel = "0.4.3"
embedded-hal = "0.2.4" # Not using latest 1.0 because of breaking changes (`rppal` implements outdated traits)
lazy_static = "1.4.0"
log = "0.4.11"

#pwm-pca9685 = "0.3.0"
rppal = { version = "0.11.3", features = ["hal-unproven"] }
#linux-embedded-hal = { version = "0.3", features = ["gpio_cdev"] }
#gpio-cdev = "0.4.0"
#serialport = { version = "3.3.0", default-features = false }
spidev = "0.4.0"
systemstat = "0.1.5"
tini = "0.4.0"
#ublox = { version = "0.2.1", features = ["serial"] }
nalgebra = "0.22.0"