[package]
name = "lsm9ds1"
version = "0.1.0"
authors = ["vincent <vincent.leporcher@telecom-paris.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autopilot = { path = "../autopilot" }

nalgebra = "0.22.0"
spidev = "0.4.0"